fix spacings and fix modal daily-card and add modal on daily card page

--- a/estate-complexes-redesign/css/annonce-page-daily.scss
+++ b/estate-complexes-redesign/css/annonce-page-daily.scss
@@ -40,6 +40,13 @@
 
 // Extended entity
 .extendedEntity {
+  h2 {
+    font-size: 20px;
+    line-height: 1.2;
+    font-weight: 700;
+    margin: 0;
+  }
+
   .ds-annouce-info {
     color: $color-grey;
     font-size: 14px;
@@ -77,6 +84,7 @@
   .ds-social {
     padding-left: 15px;
     padding-right: 15px;
+    margin-bottom: 10px;
 
     .object__actions-item {
       display: inline-flex;
@@ -260,6 +268,7 @@
     padding-left: 15px;
     padding-right: 15px;
     gap: 10px;
+    margin-bottom: 10px;
 
     @media (max-width: 768px) {
       grid-template-columns: repeat(2, 1fr);
@@ -391,26 +400,28 @@
   display: flex;
   flex-direction: column;
   gap: 15px;
-
   margin-bottom: 30px;
-
-  h2 {
-    font-size: 20px;
-    line-height: 1.2;
-    font-weight: 700;
-    margin: 0;
-  }
 
   .rules-layout-col-2 {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 5px;
+
+    @media (max-width: 767px) {
+      grid-template-columns: repeat(1, 1fr);
+      gap: 5px;
+    }
   }
 
   .rules-layout-col-3 {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 5px;
+
+    @media (max-width: 767px) {
+      grid-template-columns: repeat(1, 1fr);
+      gap: 15px;
+    }
   }
 
   .time-rule {
@@ -432,7 +443,8 @@
   }
 
   .rule {
-    display: flex;
+    display: grid;
+    grid-template-columns: 50px 1fr;
     align-items: center;
     gap: 10px;
     font-size: 14px;
@@ -526,4 +538,205 @@
       height: 5px;
     }
   }
+}
+
+// modals
+#form_code_call_modal,
+#form_unauth_modal,
+#form_code_sms_modal,
+#form_guests_modal {
+  .modal-dialog {
+    width: 400px;
+  }
+  .modal-body {
+    padding: 0 20px 20px;
+  }
+  .modal-header {
+    .modal-title {
+      font-size: 20px;
+      line-height: 1.2;
+      font-weight: 700;
+      color: $color-dark;
+
+      margin-top: 8px;
+      margin-left: 5px;
+    }
+  }
+  form {
+    label {
+      font-size: 14px;
+      line-height: 1.3;
+      color: $color-grey;
+      font-weight: 400;
+      margin-bottom: 5px;
+
+      &.control-label-xl {
+        font-size: 18px;
+        line-height: 1.2;
+        font-weight: 700;
+        color: $color-dark;
+        margin-bottom: 10px;
+      }
+    }
+    p {
+      margin-bottom: 15px;
+    }
+    .form-group {
+      margin-bottom: 15px;
+    }
+    .text-muted {
+      font-size: 14px;
+      line-height: 1.3;
+    }
+
+    button[type="submit"] {
+      width: 100%;
+      text-align: center;
+      justify-content: center;
+      margin-top: 20px;
+      margin-bottom: 10px;
+    }
+  }
+  hr {
+    margin-top: 15px;
+    margin-bottom: 15px;
+  }
+}
+
+#form_code_sms_modal form {
+  .sms-code-countdown {
+    margin-top: 15px;
+    margin-bottom: 0;
+  }
+  .resend-sms-code-trigger {
+    width: 100%;
+    text-align: center;
+    justify-content: center;
+    margin-top: 20px;
+    margin-bottom: 0;
+  }
+
+  .sms-code-feedback-error {
+    color: $color-invalid;
+    font-size: 14px;
+    line-height: 1.3;
+    margin-top: 15px;
+  }
+}
+
+#form_guests_modal form {
+  .animated-radios-and-checkboxes {
+    .checkbox {
+      margin-bottom: 0;
+      margin-top: 0;
+    }
+
+    label {
+      font-size: 14px;
+      line-height: 1.3;
+      color: $color-dark;
+      font-weight: 400;
+      margin-bottom: 0;
+      height: 20px;
+      padding: 0;
+    }
+  }
+}
+
+.sms-code-input {
+  position: relative;
+  width: 100%;
+
+  .sms-input {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 44px;
+    opacity: 0;
+    font-size: 16px;
+    letter-spacing: 20px;
+    text-align: center;
+    z-index: 2;
+  }
+  .code-boxes {
+    display: flex;
+    gap: 15px;
+    justify-content: center;
+    pointer-events: none;
+  }
+  .code-box {
+    width: 44px;
+    height: 44px;
+    border: 1px solid $color-secondary;
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 16px;
+    line-height: 1.5;
+    position: relative;
+  }
+  .code-box.filled {
+    border-color: $color-secondary;
+  }
+  .code-box.active {
+    border-width: 2px;
+    border-color: $color-primary;
+  }
+
+  &.has-feedback {
+    &.has-success {
+      .code-box {
+        border-color: $color-valid;
+      }
+    }
+    &.has-error {
+      .code-box {
+        border-color: $color-invalid;
+      }
+    }
+  }
+}
+
+// Counter
+.controls {
+  > div {
+    width: 100%;
+    padding: 0;
+  }
+}
+.form-counter {
+  display: flex;
+  align-items: center;
+  gap: 3px;
+
+  .btn {
+    display: flex;
+    width: 44px;
+  }
+  .form-control.form-counter__input {
+    min-width: 60px;
+
+    text-align: center;
+    padding-left: 10px !important;
+    -moz-appearance: textfield;
+    &::-webkit-inner-spin-button,
+    &::-webkit-outer-spin-button {
+      -webkit-appearance: none;
+      margin: 0;
+    }
+  }
+}
+
+// Message invalid
+.message-invalid {
+  color: $color-invalid;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.3;
+  margin-top: 15px;
+  padding: 10px;
+  border-radius: 5px;
+  background-color: $color-attention-surface;
 }
